@@ -159,6 +159,10 @@ function toggleTransElements() {
                 <label for="conf[site][filterChain]">{translate(#Custom filter chain#)}</label>
                 <input type="text" name="conf[site][filterChain]" id="conf[site][filterChain]" value="{conf[site][filterChain]}" />
             </p>
+            <p>
+                <label for="conf[site][alert]">{translate(#Broadcast message#)}</label>
+                <input type="text" class="longText" name="conf[site][alert]" id="conf[site][alert]" value="{conf[site][alert]}" />
+            </p>
 
             <h3>{translate(#Paths#)}</h3>
             <p>
